Imager release history.  Older releases can be found in Changes.old

Imager 0.71_02 - 1 Dec 2009
==============

 - adjust the way we load the threads module for the threads test so
   it works with non-threaded perls

Imager 0.71_01 - 30 Nov 2009
===========

Bug fixes:

 - use scanline oriented operations to flip images instead of pixel
   operations
   https://rt.cpan.org/Ticket/Display.html?id=39278

 - use double/sample operations to flip large sample images instead of
   8-bit sample operations.
   https://rt.cpan.org/Ticket/Display.html?id=39280

 - fix POD nits
   https://rt.cpan.org/Ticket/Display.html?id=51874

 - prevent double-frees when someone creates Imager objects and then
   creates a thread.  Note: this just handles some simple cases,
   Imager doesn't support perl threads, and isn't likely to.
   https://rt.cpan.org/Ticket/Display.html?id=52268

Imager 0.71 - 16 Nov 2009
===========

 - add the opacity fill type - an adaptor that modifies the opacity of
   another fill.

Bug fixes:

 - the conv filter now enforces that the sum of the coefficients is
   non-zero.  Also, rather than skipping pixels off the edge off the
   edge of the image, the closest edge pixel is used.  Previously
   dividing by the zero sum of coefficients could cause invalid
   results or runtime exceptions.
   Thanks to David Cantrell's Alpha-NetBSD CPAN test box for revealing
   this bug.

Imager 0.70 - 21 Sep 2009
===========

Bug fixes:

 - release image row and comments memory on all error returns in gif
   reader

 - handle zero length extensions, previously this would cause a null
   pointer dereference
   Thanks to Krzysztof Wojtaś for the test data and fix for this.

 - an integer division meant that preview scaling to below 1 pixel
   wide or high (which isn't too useful anyway) was calculating using
   NaNs on most platforms, and causing an exception on others.
   Thanks to David Cantrell for producing a backtrace of the crash on