@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Imager
-version:            0.71_02
+version:            0.71_03
 abstract:           Perl extension for Generating 24 bit Images
 author:
     - Tony Cook <tony@imager.perl.org>, Arnar M. Hrafnkelsson
